# economy

./: README.md
alpenmesh-economy/: Cargo.toml  README.md  app.yaml
alpenmesh-economy-dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js
alpenmesh-economy-dashboard/src/: App.svelte  app.css
alpenmesh-economy-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
alpenmesh-economy-frontend/src/: main.jsx
alpenmesh-economy-frontend/src/api/: auth.js  client.js  dashboard.js  users.js  workers.js
alpenmesh-economy-frontend/src/components/layout/: AppLayout.jsx  PublicLayout.jsx  Sidebar.jsx  ThemeToggle.jsx  TopBar.jsx
alpenmesh-economy-frontend/src/components/ui/: Alert.jsx  Badge.jsx  Button.jsx  Card.jsx  Dialog.jsx  EmptyState.jsx  Input.jsx  Phase2Banner.jsx  Spinner.jsx  StatWidget.jsx  StatusBadge.jsx
alpenmesh-economy-frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
alpenmesh-economy-frontend/src/hooks/: useApi.js  useMotion.js
alpenmesh-economy-frontend/src/lib/: animations.js
alpenmesh-economy-frontend/src/pages/app/: ApiDocs.jsx  AppMarketplace.jsx  Dashboard.jsx  Jobs.jsx  Profile.jsx  Proofs.jsx  Wallets.jsx  WorkerDetail.jsx  Workers.jsx
alpenmesh-economy-frontend/src/pages/auth/: Login.jsx  Signup.jsx
alpenmesh-economy-frontend/src/router/: index.jsx
alpenmesh-economy-frontend/src/styles/: globals.css
alpenmesh-economy/src/: main.rs  state.rs
alpenmesh-economy/src/controllers/: economy_controller.rs  mod.rs
(+5 files in other folders)
