[package]
name = "alpenmesh-economy"
version = "0.1.0"
edition = "2024"

# Standalone workspace so this crate works when created inside another repo (e.g. Oxide itself).
[workspace]

[dependencies]
oxide-framework-core = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
